--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,33 @@
 @tailwind utilities;
 
 
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Inter:wght@400;600&display=swap');
+
+
 body {
+  background-color: rgb(240, 251, 255);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.welcome{
+  background-image: url('./assets/Welcome_waves.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0vw 24vh;
 }
+
+.aboutmodal{
+  -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 0.5s; /* Firefox < 16 */
+   -ms-animation: fadein 0.5s; /* Internet Explorer */
+    -o-animation: fadein 0.5s; /* Opera < 12.1 */
+       animation: fadein 0.5s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+
 
